Added interactive logic when joining a running room. Added photos taken. Added person_Run_LIst

--- a/app/src/main/res/layout/fisr_page.xml
+++ b/app/src/main/res/layout/fisr_page.xml
@@ -28,7 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Creatshare - 博信校园"
+        android:text="XiyouMobile - 玩西邮"
         android:layout_below="@id/first_page_logon_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
